// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove_person removing from floating 1`] = `
{
  "floating": {
    "exempt": false,
    "id": "-1",
    "name": "floating_board_name_start",
    "people": [],
    "roles": [],
  },
  "id": "project_id_start",
  "name": "project_name_start",
  "pairingBoards": [
    {
      "exempt": false,
      "id": "red_id_start",
      "name": "red_start",
      "people": [
        {
          "id": "red_parrit_id",
          "name": "red_parrit",
          "pairing_board_id": "red_id_start",
          "type": "Person",
        },
      ],
      "roles": [],
    },
    {
      "exempt": false,
      "id": "blue_id_start",
      "name": "blue_start",
      "people": [],
      "roles": [
        {
          "id": "role1",
          "name": "role",
          "pairing_board_id": "blue_id_start",
          "type": "Role",
        },
      ],
    },
  ],
}
`;

exports[`remove_person removing from pb 1`] = `
{
  "floating": {
    "exempt": false,
    "id": "-1",
    "name": "floating_board_name_start",
    "people": [
      {
        "id": "floater_id_start",
        "name": "floater_name_start",
        "pairing_board_id": "-1",
        "type": "Person",
      },
    ],
    "roles": [],
  },
  "id": "project_id_start",
  "name": "project_name_start",
  "pairingBoards": [
    {
      "exempt": false,
      "id": "red_id_start",
      "name": "red_start",
      "people": [],
      "roles": [],
    },
    {
      "exempt": false,
      "id": "blue_id_start",
      "name": "blue_start",
      "people": [],
      "roles": [
        {
          "id": "role1",
          "name": "role",
          "pairing_board_id": "blue_id_start",
          "type": "Role",
        },
      ],
    },
  ],
}
`;
